# ism6hg256x-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
examples/fsm_fourd_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_fourd_stm32f401re/src/: main.rs
examples/fsm_fourd_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_fourd_stm32f401re_embassy/src/: config.rs  main.rs
examples/fsm_glance_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re/src/: main.rs
examples/fsm_glance_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re_embassy/src/: config.rs  main.rs
examples/hg_wakeup_stm32f401re/: Cargo.toml  README.md
examples/hg_wakeup_stm32f401re/src/: main.rs
examples/hg_wakeup_stm32f401re_embassy/: Cargo.toml  README.md
examples/hg_wakeup_stm32f401re_embassy/src/: main.rs
examples/mlc_gym_stm32f401re/: Cargo.toml  README.md  build.rs
examples/mlc_gym_stm32f401re/src/: main.rs
examples/mlc_gym_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/read_data_irq_stm32f401re/: Cargo.toml  README.md
examples/read_data_irq_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_fifo_stm32f401re/: README.md
examples/read_fifo_stm32f401re_embassy/: Cargo.toml  README.md
src/: driver.rs  lib.rs
src/register/: advanced.rs  embedded.rs  if2.rs  main.rs  mod.rs  sensor_hub.rs
(+8 files in other folders)
